--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
   height: 100%;
+  height: 100dvh;
 }
 
 #root {
