--- a/src/pages/CardsPage.module.css
+++ b/src/pages/CardsPage.module.css
@@ -194,7 +194,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  max-height: 280px;
+  max-height: 50vh;
   transform-style: preserve-3d;
   z-index: 2;
 }
