--- a/src/pages/QuizPage.module.css
+++ b/src/pages/QuizPage.module.css
@@ -150,7 +150,6 @@
   font-size: 28px;
   font-weight: 800;
   color: #fff;
-  margin-top: 8px;
   line-height: 1.3;
 }
 
